*Fixed that spawning action figures of a certain gender didn't work on servers
*Fixed that dinosaurs weren't rendered correctly in mob spawners
*Fixed that decayable JC leaves are loosing that property after some time
*Fixed a rare crash problem with the dart gun
-Removed the JurassiCraft Iron Nugget
*Improved the helicopter's behaviour (Kicks for flying etc.)