@@ -106,7 +106,7 @@ public class InterpValue implements INBTSerializable<NBTTagCompound> {
     public static void onTick(TickEvent event) {
         Side side = FMLCommonHandler.instance().getSide();
         if((event instanceof ClientTickEvent && side.isClient()) || (event instanceof ServerTickEvent && side.isServer())) {
-            synchronized (MARKED_REMOVE) {
+            synchronized (INSTANCES) {
             	INSTANCES.forEach(InterpValue::tickInterp);
             	MARKED_REMOVE.forEach(INSTANCES::remove);
             	MARKED_REMOVE.clear();
